docs/css/spectre.css
/* ... */
.bar .bar-item:first-child {
  border-bottom-left-radius: .2rem;
  border-top-left-radius: .2rem;
}
.bar .bar-item:last-child {
  border-bottom-right-radius: .2rem;
  border-top-right-radius: .2rem;
  -ms-flex-negative: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
}
.bar-slider {
  height: .2rem;
  margin: 1rem 0;
  position: relative;
}
.bar-slider .bar-item {
  left: 0;
  padding: 0;
  position: absolute;
}
.bar-slider .bar-item:not(:last-child):first-child {
  background: #f0f1f4;
  z-index: 1;
}
.bar-slider .bar-slider-btn {
  background: #5764c6;
  border: 0;
  border-radius: 50%;
  height: 1.2rem;
  padding: 0;
  position: absolute;
  right: 0;
  top: 50%;
  -webkit-transform: translate(50%, -50%);
  -ms-transform: translate(50%, -50%);
  transform: translate(50%, -50%);
  width: 1.2rem;
}
.bar-slider .bar-slider-btn:active {
  box-shadow: 0 0 0 .2rem #5764c6;
}
.card {
  background: #fff;
  border: .1rem solid #f0f1f4;
  border-radius: .2rem;
  display: block;
}
.card .card-header,
.card .card-body,
.card .card-footer {
  padding: 1.5rem;
  padding-bottom: 0;
}
.card .card-header:last-child,
.card .card-body:last-child,
.card .card-footer:last-child {
  padding-bottom: 1.5rem;
}
.card .card-image {
  padding-top: 1.5rem;
}
.card .card-image:first-child {
  padding-top: 0;
}
.card .card-image:first-child img {
  border-top-left-radius: .2rem;
  border-top-right-radius: .2rem;
}
.card .card-image:last-child img {
  border-bottom-left-radius: .2rem;
  border-bottom-right-radius: .2rem;
}
.card .card-title {
  font-size: 2rem;
}
.card .card-subtitle {
  font-size: 1.2rem;
  opacity: .5;
}
.chip {
  -webkit-align-items: center;
  align-items: center;
  background: #f0f1f4;
  border-radius: .2rem;
  color: #727e96;
  display: -ms-inline-flexbox;
  display: inline-flex;
  display: -webkit-inline-flex;
  -ms-flex-align: center;
  height: 2.8rem;
  margin: 0 .1rem .1rem 0;
  max-width: 100%;
  padding: .1rem .8rem;
  text-decoration: none;
  vertical-align: middle;
}
.chip.active {
  background: #5764c6;
  color: #fff;
}
.chip .avatar {
  margin-left: -.4rem;
  margin-right: .4rem;
}
.dropdown {
  display: inline-block;
  position: relative;
}
.dropdown .menu {
  -webkit-animation: slide-down .2s ease 1;
  animation: slide-down .2s ease 1;
  display: none;
  left: 0;
  position: absolute;
  top: 100%;
}
.dropdown.dropdown-right .menu {
  left: auto;
  right: 0;
}
.dropdown.active .menu,
.dropdown .dropdown-toggle:focus + .menu,
.dropdown .menu:hover {
  display: block;
}
.menu {
  background: #fff;
  border-radius: .2rem;
  box-shadow: 0 .1rem .4rem rgba(69, 77, 93, .3);
  list-style: none;
  margin: 0;
  min-width: 18rem;
  padding: 1rem;
  -webkit-transform: translateY(.5rem);
  -ms-transform: translateY(.5rem);
  transform: translateY(.5rem);
  z-index: 100;
}
.menu .menu-item {
  margin-top: 0;
  padding: 0 .8rem;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
.menu .menu-item > a {
  border-radius: .2rem;
  color: inherit;
  display: block;
  margin: 0 -.8rem;
  padding: .6rem .8rem;
  text-decoration: none;
}
.menu .menu-item > a:focus,
.menu .menu-item > a:hover {
  color: #5764c6;
}
.menu .menu-item > a:active,
.menu .menu-item > a.active {
  background: #fbfbfe;
  color: #5764c6;
}
.menu .menu-badge {
  float: right;
  padding: .6rem 0;
}
.menu .menu-badge .btn {
  margin-top: -.2rem;
}
.modal {
  -webkit-align-items: center;
  align-items: center;
  bottom: 0;
  display: none;
  -ms-flex-align: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  left: 0;
  opacity: 0;
  overflow: hidden;
  padding: 1rem;
  position: fixed;
  right: 0;
  top: 0;
}
.modal:target,
.modal.active {
  display: flex;
  display: -ms-flexbox;
  display: -webkit-flex;
  opacity: 1;
  z-index: 400;
}
.modal:target .modal-overlay,
.modal.active .modal-overlay {
  background: rgba(69, 77, 93, .5);
  bottom: 0;
  cursor: default;
  display: block;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
}
.modal:target .modal-container,
.modal.active .modal-container {
  -webkit-animation: slide-down .2s ease 1;
  animation: slide-down .2s ease 1;
  max-width: 64rem;
  z-index: 1;
}
.modal.modal-sm .modal-container {
  max-width: 32rem;
}
.modal-container {
  background: #fff;
  border-radius: .2rem;
  box-shadow: 0 .4rem 1rem rgba(69, 77, 93, .3);
  display: block;
  margin: 0 auto;
  padding: 0;
  text-align: left;
}
.modal-container .modal-header {
  padding: 1.5rem;
}
.modal-container .modal-header .modal-title {
  font-size: 1.6rem;
  margin: 0;
}
.modal-container .modal-body {
  max-height: 50vh;
  overflow-y: auto;
  padding: 1.5rem;
  position: relative;
}
.modal-container .modal-footer {
  padding: 1.5rem;
  text-align: right;
}
.breadcrumb,
.tab,
.pagination,
.nav {
  list-style: none;
  margin: .5rem 0;
}
.breadcrumb {
  padding: 1.2rem;
}
.breadcrumb .breadcrumb-item {
  display: inline-block;
  margin: 0;
}
.breadcrumb .breadcrumb-item:last-child {
  color: #acb3c2;
}
.breadcrumb .breadcrumb-item:not(:first-child)::before {
  color: #e7e9ed;
  content: "/";
  padding: 0 .4rem;
}
.tab {
  -webkit-align-items: center;
  align-items: center;
  border-bottom: .1rem solid #f0f1f4;
  display: flex;
  display: -ms-flexbox;
  display: -webkit-flex;
  -ms-flex-align: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}
.tab .tab-item {
  margin-top: 0;
}
.tab .tab-item.tab-action {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  text-align: right;
}
.tab .tab-item a {
  border-bottom: .2rem solid transparent;
  color: inherit;
  display: block;
  margin-top: 0;
  padding: .5rem 1.2rem;
  text-decoration: none;
}
.tab .tab-item a:focus,
.tab .tab-item a:hover {
  color: #5764c6;
}
.tab .tab-item.active a,
.tab .tab-item a.active {
  border-bottom-color: #5764c6;
  color: #5764c6;
}
/* ... */

